--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -27,7 +27,7 @@ const {
   </div>
   <div class="relative max-w-7xl mx-auto px-4 sm:px-6">
     {!noSpacer && <div class="pt-0 md:pt-[76px] pointer-events-none" />}
-    <div class="py-12 md:py-20">
+    <div class={`py-12 md:py-20 ${noSpacer ? 'pt-0 md:pt-20' : ''}`}>
       <div class="text-center pb-10 md:pb-16 max-w-5xl mx-auto">
         {
           tagline && (
