--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const homePageSchema = generateHomePageSchema(Astro.url, pageTitle);
   <StructuredData schema={homePageSchema} />
 
   <!-- Site Logo -->
-  <div class="text-center py-6 flex justify-center">
+  <div class="text-center pt-6 pb-2 flex justify-center">
     <div class="h-24 w-auto">
       <Image
         src={resolvedLogoLight}
@@ -93,7 +93,7 @@ const homePageSchema = generateHomePageSchema(Astro.url, pageTitle);
 
 
   <!-- Site Name -->
-  <div class="text-center pt-8 pb-0">
+  <div class="text-center pt-0 pb-0">
     <h1 class="text-5xl md:text-6xl font-bold leading-tighter tracking-tighter mb-4 font-heading">
       {settings.site.name}
     </h1>
