--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,6 +78,7 @@ const siteNameWords = settings.site.name.split(' ');
   }
   .site-name-multicolor span {
     font-size: inherit !important;
+    display: block;
   }
 </style>
 
