--- a/src/components/ui/Timeline.astro
+++ b/src/components/ui/Timeline.astro
@@ -42,7 +42,9 @@ const {
                 )}
               </div>
             </div>
-            {index !== items.length - 1 && <div class="w-px h-full bg-black/10 dark:bg-slate-400/50" />}
+            {index !== items.length - 1 && items[index + 1]?.joined_to_previous && (
+              <div class="w-px h-full bg-black/10 dark:bg-slate-400/50" />
+            )}
           </div>
           <div class={`pt-1 ${index !== items.length - 1 ? 'pb-8' : ''}`}>
             {title && <p class={twMerge('text-xl font-bold', titleClass, itemClasses?.title)} set:html={title} />}
