--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -71,17 +71,15 @@ const {
       <div aria-hidden="true" class="mt-10 md:mt-0 md:basis-1/2">
         {
           image && (
-            <div class="relative m-auto max-w-4xl">
+            <div class="relative m-auto max-w-4xl max-h-[50vh] md:max-h-[60vh]">
               {typeof image === 'string' ? (
                 <Fragment set:html={image} />
               ) : (
                 <Image
-                  class="mx-auto w-full rounded-lg bg-gray-500 shadow-lg"
-                  width={500}
-                  height={500}
+                  class="mx-auto rounded-lg shadow-lg"
                   widths={[400, 768]}
                   sizes="(max-width: 767px) calc(100vw - 32px), 608px"
-                  layout="responsive"
+                  layout="contained"
                   {...image}
                 />
               )}
