--- a/src/components/widgets/Steps.astro
+++ b/src/components/widgets/Steps.astro
@@ -37,12 +37,12 @@ const {
     </div>
     {
       image && (
-        <div class="relative md:basis-1/2">
+        <div class="relative md:basis-1/2 max-h-[50vh] md:max-h-none">
           {typeof image === 'string' ? (
             <Fragment set:html={image} />
           ) : (
             <Image
-              class="inset-0 object-cover object-top w-full rounded-md shadow-lg md:absolute md:h-full bg-gray-400 dark:bg-slate-700"
+              class="inset-0 object-cover object-top w-full h-full rounded-md shadow-lg md:absolute bg-gray-400 dark:bg-slate-700"
               widths={[400, 768]}
               sizes="(max-width: 767px) calc(100vw - 32px), 480px"
               width={432}
